k8s/db/db-deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bookstore-db
spec:
  serviceName: bookstore-db-svc
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-db
  template:
    metadata:
      labels:
        app: bookstore-db
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: db-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: bookstore-sc
        resources:
          requests:
            storage: 10Gi
