k8s/db/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7.0
        ports:
          - containerPort: 6379
        volumeMounts:
          - name: redis-data
            mountPath: /data
      volumes:
      - name: redis-data
